<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable = "false">Maze</string>
    <string name="level">LEVEL</string>
    <string name="level_n">LEVEL N</string>
    <string name="time_default">00:00:00</string>
    <string name="moves_default">3000</string>
    <string name="played">Played</string>
    <string name="wins">Wins</string>
    <string name="loses">Loses</string>
    <string name="fastest_win">Fastest Win</string>
    <string name="moves">MOVES</string>
    <string name="time">TIME</string>
    <string name="quick_game">QUICK GAME</string>
    <string name="normal">NORMAL</string>
    <string name="records">RECORDS</string>
    <string name="practice">PRACTICE</string>
    <string name="instruction_start">You start at the green square in the top left corner</string>
    <string name="instruction_target">You have to reach the red square within the given number of moves</string>
    <string name="instruction_navigation">Click the buttons at the bottom to move in that direction</string>
    <string name="instruction_main_target">Reach the red square to end the game</string>
    <string name="instruction_time_limited">Remember you have only limited moves to make and limited time</string>
    <string name="have_fun">HAVE FUN</string>
    <string-array name="difficulty_options">
        <item >Sandbox</item>
        <item >Normal</item>
        <item >Hard</item>
        <item >Insane</item>
        <item >Hell</item>
    </string-array>

</resources>
