<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical" >
    
    	<LinearLayout 
    	    android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		>
	
	        <TextView
	            android:id="@+id/recordsQuickGamesLevel"
	            android:layout_width="0dp"
	            android:layout_weight="0.25"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/level"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/recordsQuickGamesPlayedTextView"
	            android:layout_width="0dp"
	            android:layout_weight="0.2"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/played"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/recordsQuickGamesWinTextView"
	            android:layout_width="0dp"
	            android:layout_weight="0.2"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/wins"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/recordsQuickGamesLosesTextView"
	            android:layout_width="0dp"
	            android:layout_weight="0.2"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/loses"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/recordsQuickGamesFastestTextView"
	            android:layout_width="0dp"
	            android:layout_weight="0.2"
	            android:layout_height="wrap_content"
	            android:gravity="center"
	            android:text="@string/fastest_win"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
        </LinearLayout>

</LinearLayout>