<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="8dp" >

    <TextView
        android:id="@+id/recordsLevelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:text="@string/level_n"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/recordsTimeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="end"
        android:text="@string/time_default"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/recordsMovesTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="end"
        android:text="@string/moves_default"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
