<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:padding="8dp">
	
	    <TextView
	        android:id="@+id/instructionStart"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:padding="5dp"
	        android:text="@string/instruction_start"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <ImageView
	        android:id="@+id/imageStart"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:src="@drawable/start_location" />

	    <TextView
	        android:id="@+id/instruction_target"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:padding="5dp"
	        android:text="@string/instruction_target"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <ImageView
	        android:id="@+id/imageEnd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:src="@drawable/end_location" />

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:padding="5dp"
	        android:text="@string/instruction_navigation"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <ImageView
	        android:id="@+id/imageControls"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:src="@drawable/click_to_move" />

	    <TextView
	        android:id="@+id/instructionMainTarget"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:padding="5dp"
	        android:text="@string/instruction_main_target"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <ImageView
	        android:id="@+id/imageLastStep"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:src="@drawable/touch_end" />

	    <TextView
	        android:id="@+id/instructionTimeLimited"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:padding="5dp"
	        android:text="@string/instruction_time_limited"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <ImageView
	        android:id="@+id/instructionMovesLeft"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding = "8dp"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:src="@drawable/moves_made" />
	    
	    <ImageView
	        android:id="@+id/instructionTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding = "8dp"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:src="@drawable/time_left" />

	    <ImageView
	        android:id="@+id/instructionResult"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding = "8dp"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:src="@drawable/success" />
		
		<TextView
	        android:id="@+id/textView6"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:padding="5dp"
	        android:text="@string/have_fun" />
			
	</LinearLayout>

</ScrollView>