<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@drawable/main_image"
    tools:context="${relativePackage}.${activityClass}"
    android:paddingTop="8dp" 
    android:paddingLeft="8dp"
    android:paddingRight="8dp">


    <ImageButton
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/help_button"
        android:padding="8dp"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:src="@android:drawable/ic_menu_help" />

    <Button
        android:id="@+id/quickGame"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/records"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#e5383b"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/quick_game"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/records"
        android:layout_below="@+id/quickGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#e5383b"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/records"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/practiceGame"
        android:layout_below="@id/records"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#e5383b"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/practice"
        android:textColor="#ffffff"
        android:textSize="20sp" />
</RelativeLayout>
